--- a/res.qrc
+++ b/res.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/images">
         <file>player.png</file>
         <file>bg.png</file>
+        <file>deadman.png</file>
     </qresource>
 </RCC>
