--- a/res.qrc
+++ b/res.qrc
@@ -3,5 +3,11 @@
         <file>player.png</file>
         <file>bg.png</file>
         <file>deadman.png</file>
+        <file>asmr-1.png</file>
+        <file>asmr-2.png</file>
+        <file>asmr-3.png</file>
+        <file>asmr-4.png</file>
+        <file>asmr-5.png</file>
+        <file>parchment.png</file>
     </qresource>
 </RCC>
