--- a/res.qrc
+++ b/res.qrc
@@ -14,7 +14,7 @@
         <file>syrok-small-3.png</file>
         <file>syrok-small-4.png</file>
         <file>syrok-small-5.png</file>
-        <file>slot.png</file>
+        <file>tree.png</file>
     </qresource>
     <qresource prefix="/sounds">
         <file>crush-1.wav</file>
