--- a/res.qrc
+++ b/res.qrc
@@ -18,6 +18,12 @@
         <file>kids.png</file>
         <file>dog.png</file>
         <file>kb.png</file>
+        <file>dye-small-1.png</file>
+        <file>dye-small-2.png</file>
+        <file>dye-small-3.png</file>
+        <file>dye-small-4.png</file>
+        <file>dye-small-5.png</file>
+        <file>unicorn.png</file>
     </qresource>
     <qresource prefix="/sounds">
         <file>crush-1.wav</file>
