Imroved snack game, started adding constexprs

--- a/res.qrc
+++ b/res.qrc
@@ -14,7 +14,7 @@
         <file>syrok-small-3.png</file>
         <file>syrok-small-4.png</file>
         <file>syrok-small-5.png</file>
-        <file>tree.png</file>
+        <file>kalina.png</file>
         <file>kids.png</file>
         <file>dog.png</file>
         <file>kb.png</file>
